Run buildbots with PR comments

--- a/master/master.cfg
+++ b/master/master.cfg
@@ -488,11 +488,22 @@ for name, worker, buildfactory, stability in builders:
 
 github_status_builders.extend(pull_request_builders)
 
+@util.renderer
+def bot_filter(properties):
+    if not properties.getProperty("is_comment"):
+        return pull_request_builders
+
+    action = properties.getProperty("action")
+    if action == "run":
+        return properties.getProperty("bots", [])
+    else:
+        return pull_request_builders
+
 c['schedulers'].append(AnyBranchScheduler(
         name="pull-request-scheduler",
         change_filter=util.ChangeFilter(filter_fn=should_pr_be_tested),
         treeStableTimer=30,  # seconds
-        builderNames=pull_request_builders,
+        builderNames=bot_filter,
     ))
 
 
